@@ -42,18 +42,6 @@
 
 #define PSLR_LIGHT_METER_AE_LOCK 0x8
 
-#define PSLR_AF_POINT_TOP_LEFT   0x1
-#define PSLR_AF_POINT_TOP_MID    0x2
-#define PSLR_AF_POINT_TOP_RIGHT  0x4
-#define PSLR_AF_POINT_FAR_LEFT   0x8
-#define PSLR_AF_POINT_MID_LEFT   0x10
-#define PSLR_AF_POINT_MID_MID    0x20
-#define PSLR_AF_POINT_MID_RIGHT  0x40
-#define PSLR_AF_POINT_FAR_RIGHT  0x80
-#define PSLR_AF_POINT_BOT_LEFT   0x100
-#define PSLR_AF_POINT_BOT_MID    0x200
-#define PSLR_AF_POINT_BOT_RIGHT  0x400
-
 typedef enum {
     PSLR_BUF_PEF,
     PSLR_BUF_DNG,
