@@ -40,6 +40,7 @@ version 0.84.05
 	Filename extension bugfixes
 	Avoid double unrecognized option error message
 	Show error message if servermode is specified in Windows
+	Human readable selected/focused af point (for 11 AF points)
 
 version 0.84.04 ( 2017-05-13 )
 	Android: adding icon
